<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_model"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.this_user.ourproject5778_4711_9075.controller.AddModelActivity">

    <TextView
        android:text="@string/deatails3"
        android:textSize="30dp"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />


    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/codeModel"
        android:ems="10"
        android:id="@+id/codeModel"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/companyModel"
        android:ems="10"
        android:id="@+id/companyModel"
        android:layout_below="@+id/codeModel"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/modelName"
        android:ems="10"
        android:id="@+id/modelName"
        android:layout_below="@+id/companyModel"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/engineCapacity"
        android:ems="10"
        android:id="@+id/engineCapacity"
        android:layout_below="@+id/modelName"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/productionYear"
        android:ems="10"
        android:id="@+id/productionYear"
        android:layout_above="@+id/addModelButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp" />



    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/seatingPlace"
        android:ems="10"

        android:id="@+id/seatingPlace"
        android:layout_above="@+id/productionYear"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addModelButton"
        android:layout_alignParentBottom="true"
        android:background="#2ea2e1"
        android:drawableLeft="@drawable/ic_action_name"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_above="@+id/seatingPlace"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
