<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.this_user.ourproject5778_4711_9075.controller.CreateUserActivity">

    <TextView
        android:hint="@string/deatailes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:textSize="30dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"        android:ems="10"
        android:hint="@string/user_name"
        android:id="@+id/editTextName"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/paassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_above="@+id/editTextPassReturn"
        android:layout_alignParentEnd="true" />



    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonadd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />



    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/paassword_again"
        android:ems="10"
        android:id="@+id/editTextPassReturn"
        android:layout_above="@+id/spinner"
        android:layout_alignParentEnd="true" />

    <Spinner

        android:layout_height="45dp"
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_marginBottom="36dp"
        android:layout_alignBottom="@+id/editTextAns"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/ans"
        android:ems="10"
        android:id="@+id/editTextAns"
        android:layout_alignBottom="@+id/buttonadd"
        android:layout_alignStart="@+id/buttonadd"
        android:layout_marginBottom="50dp" />
    <TextView
        android:text="@string/Password_must_contain"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:textSize="17dp"
        android:drawableStart="@drawable/ic_action_siman2"
        android:id="@+id/textView5"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignParentStart="true" />


</RelativeLayout>

