<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.this_user.ourproject5778_4711_9075.controller.AddCarActivity">


    <TextView
        android:text="@string/deatailes1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="24dp"

        android:id="@+id/textViewDe"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/carNumD"
        android:ems="10"
        android:id="@+id/numCar"
        android:layout_below="@+id/textViewDe"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:prompt="@string/add"
        android:id="@+id/branchPark"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/modelNameD"
        android:ems="10"
        android:id="@+id/nameModel"
        android:layout_below="@+id/numCar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:text="@string/BranchPark"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:id="@+id/textView2"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/kilometers"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/modelNameD"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/numCar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/kiloD"
        android:ems="10"
        android:id="@+id/kilometers"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addCarButton"
        android:background="#2ea2e1"
        android:drawableLeft="@drawable/ic_action_name"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/price"
        android:ems="10"
        android:id="@+id/price"
        android:layout_below="@+id/branchPark"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
