<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.this_user.ourproject5778_4711_9075.controller.MainActivity">


    <EditText
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/usernametext"
        android:layout_below="@+id/logintext"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordtext"
        android:hint="@string/paassword"
        android:layout_below="@+id/usernametext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createtext"
        android:layout_below="@+id/forgotbutton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp" />

    <TextView
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logintext"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />



    <Button
        android:text="@string/sumbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sumbitbutton"
        android:background="#109eb1"
        android:layout_alignBaseline="@+id/forgotbutton"
        android:layout_alignBottom="@+id/forgotbutton"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/forgot_paswword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotbutton"
        android:background="@android:color/transparent"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/passwordtext"
        android:layout_alignParentEnd="true" />


    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignTop="@+id/forgotbutton"
        android:layout_toEndOf="@+id/logintext"
        android:layout_marginStart="16dp" />

    <Button
        android:text="@string/create_a_user"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/createbutton"
        android:textColor="#109eb1"
        android:background="@android:color/transparent"
        android:layout_below="@+id/createtext"
        android:layout_alignParentEnd="true" />


</RelativeLayout>