<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_managment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.this_user.ourproject5778_4711_9075.controller.ManagmentActivity">


    <Button
        android:text="@string/car_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/car_"
        android:drawableLeft="@drawable/ic_action_car"
        android:background="#2ea2e1"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/branch_"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/branch_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/branch_"
        android:drawableLeft="@drawable/ic_action_map"
        android:background="#2ea2e1"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/model_"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/model_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/model_"
        android:drawableLeft="@drawable/ic_action_models"
        android:background="#2ea2e1"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/client_"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/users_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:id="@+id/client_"
        android:background="#2ea2e1"
        android:layout_marginBottom="126dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
